--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,20 @@ services:
     container_name: jlab-serverA
     ports:
       - '8888:8888'
-    volumes:
-      - ./jupyter_serverA_config.py:/etc/jupyter/jupyter_server_config.py
-    command: ["jupyter", "server", "--no-browser", "--config=/etc/jupyter/jupyter_server_config.py"]
+    command: >
+      jupyter server --no-browser
+      --ip=0.0.0.0
+      --port=8888
+      --ServerApp.token=abc123
+      --ServerApp.allow_origin=*
 
   serverb:
     build: .
     container_name: jlab-serverB
     ports:
       - '8889:8889'
-    volumes:
-      - ./jupyter_serverB_config.py:/etc/jupyter/jupyter_server_config.py
-    command: ["jupyter", "lab", "--no-browser", "--config=/etc/jupyter/jupyter_server_config.py"]
+    command: >
+      jupyter lab --no-browser
+      --ip=0.0.0.0
+      --port=8889
+      --ServerApp.token=abc123
